--- a/doc/sections/05-acknowledgments.tex
+++ b/doc/sections/05-acknowledgments.tex
@@ -26,6 +26,8 @@ The work done on this project was supported by the following sources, guides and
 
 \href{https://tools.ietf.org/html/rfc5424}{RFC 5424 - The Syslog Protocol}
 
+\pagebreak
+
 \subsection{Used libraries}
 
 This project makes use of these STD C++ libraries:
