--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -1,9 +1,10 @@
 % !TEX encoding = UTF-8 Unicode
-\documentclass{report}
-\usepackage[legalpaper, portrait, margin=1in]{geometry}
+% \documentclass{report}
+\documentclass[a4paper,11pt]{article}
+
+\usepackage[left=2cm,top=2cm,text={17cm,24cm}]{geometry}
 
 \usepackage[utf8]{inputenc}
-\usepackage[czech]{babel}
 
 \title{Exportation of DNS info using Syslog}
 \author{Andrej Naňo - xnanoa00}
@@ -13,6 +14,7 @@
 \usepackage{sectsty}
 \sectionfont{\LARGE}
 
+\usepackage{url}
 \usepackage{graphicx}
 \usepackage{wrapfig}
 \usepackage{caption}
@@ -26,6 +28,9 @@
 \usepackage{color}
 \usepackage{booktabs}
 \usepackage{enumitem}
+\usepackage{float}
+
+\graphicspath{ {./images/} }
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
@@ -62,12 +67,12 @@
       \makeatother
 
 % Subtract 1 from counters that are used
-\renewcommand{\thesection}{\thechapter.\number\numexpr\value{section}-1\relax}
-\renewcommand{\thesubsection}{\thesection.\number\numexpr\value{subsection}-1\relax}
-\renewcommand{\thesubsubsection}{\thesubsection.\number\numexpr\value{subsubsection}-1\relax}
-\setcounter{secnumdepth}{3}
+% \renewcommand{\thesection}{\thechapter.\number\numexpr\value{section}-1\relax}
+% \renewcommand{\thesubsection}{\thesection.\number\numexpr\value{subsection}-1\relax}
+% \renewcommand{\thesubsubsection}{\thesubsection.\number\numexpr\value{subsubsection}-1\relax}
+% \setcounter{secnumdepth}{3}
 
-\setcounter{chapter}{1}% Not using chapters, but they're used in the counters
+% \setcounter{chapter}{1}% Not using chapters, but they're used in the counters
 
 \usepackage{parskip}
 
