--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -6,8 +6,14 @@
 
 \usepackage[utf8]{inputenc}
 
-\title{Exportation of DNS info using Syslog}
-\author{Andrej Naňo - xnanoa00}
+\title{\includegraphics[width=4.1cm,keepaspectratio,trim={1.2cm 1.2cm 1.2cm 1.2cm},clip]{vut} \\
+\vspace{4cm}
+\textit{Documentation/Manual for a project:} \\
+\textbf{Export of DNS information using the Syslog protocol}\\
+\vspace{0.5cm}
+\textsc{ISA 2018/19 - FIT VUT, BRNO}}
+
+\author{Andrej Naňo - \textbf{xnanoa00}}
 \date{\today}
 
 % big font for sections
