--- a/doc/sections/01-introduction.tex
+++ b/doc/sections/01-introduction.tex
@@ -12,45 +12,27 @@ protocol and will export selected statistics to a central log server using Syslo
 
 More detailed description of the assignment is in the following sections.
 
-The final state of the solution offered is in my opinion for the most part successfuly complete.
-
 \subsection{Features}
 
 \begin{itemize}
 \item PCAP analysis of static files (*.pcap)
 \item PCAP analysis directly from live interfaces
-\item L2 layer parsing
+\item L2 layer parsing \textit{Ethernet frame and Linux cooked-mode capture (SLL)}
+\item L3 layer parsing \textit{IPv4 and IPv6}
+\item L4 layer parsing \textit{TCP and UDP}
+\item L7 layer parsing \textbf{DNS}
     \begin{itemize}
-    \item Ethernet frame
-    \item Linux cooked-mode capture (SLL)
+    \item \textit{A, NS, CNAME, SOA, PTR, MX, AAAA, TXT, RRSIG, NSEC, DNSKEY, DS}
     \end{itemize}
-\item L3 layer parsing
-    \begin{itemize}
-    \item IPv4
-    \item IPv6
-    \end{itemize}
-\item L4 layer parsing
-    \begin{itemize}
-    \item TCP
-    \item UDP
-    \end{itemize}
-\item L5 layer parsing 
-    \begin{itemize}
-    \item \textbf{DNS} (\textit{A, NS, CNAME, SOA, PTR, MX, AAAA, TXT, RRSIG, NSEC, DNSKEY, DS resource record types})
-    \end{itemize}
-\item Export of statistics to a syslog server
+\item Export of statistics to a specified syslog server
 \end{itemize} 
 \subsection{Prerequisites}
 
 \begin{itemize}
 
-\item \textbf{Operating Systems}
-    \begin{itemize}
-    \item CentOS7+
-    \item Mac OS 10+
-    \end{itemize}
+\item \textbf{Operating Systems}: CentOS7, macOS 10, other Linux/BSD distributions..
 \item gcc version 4.8.5+
-\item syslog server
+\item a Syslog server
 
 \end{itemize}
 
@@ -58,22 +40,14 @@ The final state of the solution offered is in my opinion for the most part succe
 \subsection{Getting started}
 
 \begin{enumerate}
-\item Get the latest project version
-\begin{lstlisting}[language=Bash] 
- git clone https://github.com/andrejnano/DNS-EXPORT-PROJECT.git 
-\end{lstlisting}
-\item Change directory
-\begin{lstlisting}[language=Bash] 
-cd DNS-EXPORT-PROJECT/
-\end{lstlisting}
-\item Build the project
-\begin{lstlisting}[language=Bash] 
-make
-\end{lstlisting}
-\item Run the application
-\begin{lstlisting}[language=Bash] 
-dns-export [-r file.pcap] [-i interface] [-s syslog-server] [-t seconds]
-\end{lstlisting}
+\item Get the latest project version.\\
+\texttt{ git clone https://github.com/andrejnano/DNS-EXPORT-PROJECT.git}
+\item Change directory to project \\
+\texttt{ cd DNS-EXPORT-PROJECT/ }
+\item Build the project \\
+\texttt{ make }
+\item Run the executable \\
+\texttt{ dns-export [-r file.pcap] [-i interface] [-s syslog-server] [-t seconds]}
 \end{enumerate}
 
-\textit{More usage details are in the section} \textbf{3}
+\quad \quad \textit{More usage details are in the section} \textbf{3}
