--- a/doc/sections/02-design.tex
+++ b/doc/sections/02-design.tex
@@ -6,7 +6,7 @@ Assignment for this project can be divided into these subtasks:
 \begin{enumerate}
 \item User input handling
 \item Processing of DNS data
-\item Exporting to Syslog server
+\item Exporting to a Syslog server
 \end{enumerate}
 
 \vspace{1cm}
@@ -28,7 +28,7 @@ All of the DNS communication is carried in a single format called \textit{a mess
 To properly parse \textit{a message}, it's structure needs to be understood.
 
 \begin{figure}[h]
-\includegraphics[width=18cm]{dns-message-structure}
+\includegraphics[width=16cm]{dns-message-structure}
 \centering
 \caption{4.1. Format | RFC 1035}
 \end{figure}
@@ -59,7 +59,7 @@ Queries records contain three fields: \textit{QNAME}, \textit{QTYPE} and \textit
 
 \vspace{1cm}
 \begin{figure}[H]
-\includegraphics[width=10cm]{dns-rr}
+\includegraphics[width=8cm]{dns-rr}
 \centering
 \caption{4.1.3. Resource record format | RFC 1035}
 \end{figure}
@@ -87,13 +87,25 @@ In this project, these DNS record types will be supported:
 \item \textbf{DNSKEY} - DNS Key record
 \end{itemize}
 
+\vspace{0.5cm}
+
+For all of these records, there is a specific parser implemented. 
+The parser will output a string in a readable format and together 
+with the message's question name and type, will be stored in a statistics collection.
+If the same DNS resource record will be collected multiple times, 
+it's count will increase rather than being inserted into the collection redundantly.
 
 \pagebreak
+
+\textbf{Exporting to a Syslog server}
+
+The final task is to export collected statistics one by one to a foreign syslog server, if it was specified.
+This simply means, that the application will create a new UDP socket, on which it will send simple messages 
+in the official Syslog format specified in RFC 5424.
 
 \subsection{Requirements}
 
 Functional requirements from the assignment.
-
 \begin{table}[H]
 \centering
 \caption{Requirements}
@@ -139,7 +151,6 @@ Functional requirements from the assignment.
 \textit{REQ\_09\_03} & Facility must be set to local0. \\ \midrule
 \textit{REQ\_09\_04} & Severity must be set to Informational. \\ \midrule
 \textit{REQ\_09\_05} & Application will send each statistic in a separate syslog message. \\ \midrule
-
 \end{tabular}%
 }
 \end{table}
