--- a/doc/sections/01-introduction.tex
+++ b/doc/sections/01-introduction.tex
@@ -2,7 +2,7 @@
 
 \section{Introduction}
 
-\subsection{Description/About}
+\subsection{Project description}
 
 This software project atempts to solve a university networking course (ISA) assignment
 which has the following specifications:
