--- a/doc/manual.tex
+++ b/doc/manual.tex
@@ -8,8 +8,8 @@
 
 \title{\includegraphics[width=4.1cm,keepaspectratio,trim={1.2cm 1.2cm 1.2cm 1.2cm},clip]{vut} \\
 \vspace{4cm}
-\textit{Documentation/Manual for a project:} \\
-\textbf{Export of DNS information using the Syslog protocol}\\
+\textit{Documentation/Manual} \\
+\textbf{DNS protocol information export using the Syslog protocol}\\
 \vspace{0.5cm}
 \textsc{ISA 2018/19 - FIT VUT, BRNO}}
 
